# AstroColor

./: .gitignore  LICENSE  MANIFEST.in  README.md  demonstration.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/astro_color/: auxiliary.py  convolution.py  core.py
src/astrocolor/: __init__.py  auxiliary.py  color.py  convolution.py  core.py  errors.py  filter_objects.py  filters.py  photospectral_objects.py  physical_models.py  spectral_objects.py  spectral_reconstruction.py
tests/: conftest.py  test_arithmetic.py  test_auxiliary.py  test_color.py  test_convolution.py  test_core.py  test_filter_objects.py  test_filters.py  test_spectral_objects.py  test_spectral_reconstruction.py  unit_tests.py
