[project]
name = "astrocolor"
version = "0.1.0"
description = "Library to perform spectral reconstruction, calculate synthetic photometry and colors."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Askaniy", email = "aaskaniy@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "pytest>=9.1.1",
    "scipy>=1.17.1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src/astrocolor/tests"]
